# Constat

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/src/constat_api/: __init__.py  __main__.py  audit.py  auth.py  collect_queue.py  db.py  idempotency.py  logging.py  main.py  metrics.py  middleware.py  orm.py  pii.py  retention.py  settings.py  tenant.py  worker.py
apps/api/src/constat_api/cli/: __init__.py  aws.py  cleanup_inconclusives.py  cleanup_stuck_runs.py  focus.py  onboard.py  replay_facts.py  retention.py  run_insights.py
apps/api/src/constat_api/collectors/: __init__.py  aws.py  organizations.py
apps/api/src/constat_api/insights/: __init__.py  reconcile.py  runner.py
apps/api/src/constat_api/repositories/: __init__.py  accounts.py  collect_jobs.py  collect_targets.py  facts.py  focus_charges.py  focus_coverage.py  inconclusive.py  insight_events.py  insights.py  observations.py  resources.py  source_runs.py
apps/api/src/constat_api/routers/: accounts.py  admin.py  aws.py  collect_targets.py  compliance.py  focus.py  health.py  inconclusive.py  insight_history.py  insight_runs.py  insights.py  runner.py  status.py
apps/web/: .env.example  package-lock.json  package.json  playwright.config.ts
apps/web/app/: layout.tsx  page.tsx
apps/web/app/accounts/: page.tsx
apps/web/app/api/proxy/[...path]/: route.ts
apps/web/app/chargeback/: page.tsx
apps/web/app/inconclusives/: page.tsx
apps/web/app/insight-runs/: page.tsx
apps/web/app/insights/: page.tsx
apps/web/app/insights/[id]/: page.tsx
apps/web/app/insights/inbox/: page.tsx
apps/web/app/restitution/: error.tsx  page.tsx
apps/web/app/status/: page.tsx
apps/web/components/: AckButtons.tsx  InconclusiveCard.tsx  InsightCard.tsx  PageError.tsx  PageLoading.tsx  SeverityBadge.tsx
apps/web/lib/: api.ts
apps/web/tests/e2e/: README.md  restitution.spec.ts
db/: alembic.ini
db/alembic/: README  env.py
db/alembic/versions/: 8574f09d5d61_baseline_schema_as_of_sql_migration_0021.py  ffd0fd77231a_focus_service_canonical_column_for_.py
db/migrations/: 0001_init.sql  0002_inconclusive.sql  0003_focus_columns.sql  0004_tenant_id.sql  0005_source_runs.sql  0006_facts_current_state.sql  0009_focus_charge_tags.sql  0010_audit_retention_pii.sql  0011_rls_remaining_tables.sql  0012_runtime_role.sql  0013_insight_acks.sql  0014_audit_events_immutable.sql  0017_insight_events.sql  0018_inconclusive_workflow.sql  0019_billing_currency.sql  0021_collect_jobs_enqueue_error.sql  README.md
db/migrations/_archived/: 0001_init.sql  0003_focus_columns.sql  0004_tenant_id.sql  0007_rls_policies.sql  0008_focus_charge_tags.sql  0009_focus_charge_tags_table.sql  0015_collect_jobs.sql  0016_collect_targets.sql  0020_focus_charge_tags_per_row_costs.sql  README.md
deploy/prometheus/: alerts.yml
docs/: README.md  architecture.md  audit-constat-v1.md  concepts.md  data-model.md  overview.md  roadmap-2026-H2.md  roadmap-consolidation.md  roadmap-done.md  roadmap-scoreboard-features.md
docs/adr/: ADR-01-s3-parquet-before-iceberg.md  ADR-02-aurora-postgresql.md  ADR-03-ecs-fargate-workers.md  ADR-04-step-functions-coordinator-sqs-distributor.md  ADR-05-rest-fastapi-nextjs-api-as-product-surface.md  ADR-06-namespaced-facts-before-universal-model.md  ADR-07-no-permanent-streaming.md  ADR-08-no-graph-database-in-v1-graph-ready.md  ADR-09-ai-as-consumption-layer.md  ADR-10-authentication-api-identities.md  ADR-11-parquet-querying-duckdb-then-athena.md  ADR-12-insights-first-pivot.md  ADR-13-monetary-extraction-registry.md  ADR-14-adapter-contracts.md  ADR-15-commands-and-projections.md  ADR-16-ack-carry-over-stable-id.md  ADR-17-alembic-adoption.md  README.md
docs/api/: endpoints.md
docs/concepts/: fact-registry.md
docs/design/: architecture-cloud-assurance-v2.md  resume-architecture.md
docs/development/: bug-classes.md  known-issues.md  running-the-stack.md  setup.md
docs/gtm/: positioning.md
docs/insights/: chargeback.md  ebs-gp2-to-gp3.md  ebs-unattached.md  rds-extended-support.md
docs/operations/: alerting.md  api-key-rotation.md  backup-restore.md  benchmarks.md  deployment.md  inconclusive-cleanup.md  logging.md  metrics.md
docs/pilot/: sla-pilote.md
infra/: README.md  alb.tf  customer-iam-role.md  customer-iam-role.yaml  ecs.tf  iam.tf  main.tf  outputs.tf  rds.tf  runtime_role.tf  scheduler.tf  secrets.tf  sqs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/customer/: stackset.yaml
scripts/: bench_real.py  bench_runner.py
tests/: __init__.py  conftest.py  test_ack_carryover.py  test_adapter_contracts.py  test_api_auth.py  test_api_aws.py  test_api_focus.py  test_api_insights.py  test_api_metrics.py  test_audit_immutability.py  test_aurora_eol.py  test_aws_collector.py  test_aws_ec2_connector.py  test_azure_focus.py  test_bench_regression.py  test_catalog_regions.py  test_chargeback.py  test_chargeback_runner.py  test_collect_async.py  test_collect_targets.py  test_collector_aws_audit_fixes.py  test_collector_resilience.py  test_collectors_common.py  test_compliance.py  test_contract_pins.py  test_ebs_catalog.py  test_ebs_gp2_to_gp3.py  test_ebs_gp2_to_gp3_runner.py  test_ebs_unattached.py  test_ec2_stopped.py  test_eol_common.py  test_fact_definitions.py  test_facts_upsert.py  test_focus_aggregator.py  test_focus_charge_tags.py  test_focus_coverage.py  test_focus_dialect_conformance.py  test_focus_dialect_grep_pin.py  test_focus_golden.py  test_focus_ingest.py  (+44 more)
tests/fixtures/: README.md  focus_azure_v1_0.csv  focus_golden_v1_0.csv
tests/golden/: README.md
