[project]
name = "constat"
version = "0.0.0"
description = "Cloud inventory observability — the écart chiffré"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/connectors/aws_rds",
    "packages/connectors/focus",
    "packages/insights/rds_eol",
    "packages/insights/chargeback",
    "apps/api",
]

[tool.uv.sources]
# Workspace members must be declared here for `uv sync` / `uv lock` to
# resolve them from the workspace instead of PyPI (F-11 remediation).
constat-core = { workspace = true }
constat-aws-rds = { workspace = true }
constat-focus = { workspace = true }
constat-rds-eol = { workspace = true }
constat-chargeback = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx2>=0.28",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "boto3-stubs[rds]>=1.34",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "postgres: tests that require a live Postgres (set CONSTAT_TEST_DATABASE_URL)",
]
pythonpath = [
    "packages/core/src",
    "packages/connectors/aws_rds/src",
    "packages/connectors/focus/src",
    "packages/insights/rds_eol/src",
    "packages/insights/chargeback/src",
    "apps/api/src",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine
"apps/api/src/constat_api/routers/**/*.py" = ["B008"]  # FastAPI Depends/Query in defaults is the standard pattern
"apps/api/src/constat_api/auth.py" = ["B008"]  # FastAPI Depends in default is the standard pattern for the dep
"apps/api/src/constat_api/orm.py" = ["N811"]  # SQLAlchemy pattern: import UUID as PgUUID

[tool.mypy]
python_version = "3.13"
strict = false
files = ["packages/core/src"]

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true
