[project]
name = "constat"
version = "0.0.0"
description = "Cloud inventory observability — the écart chiffré"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/connectors/aws_rds",
    "packages/connectors/aws_ec2",
    "packages/connectors/focus",
    "packages/insights/rds_eol",
    "packages/insights/mysql_eol",
    "packages/insights/aurora_eol",
    "packages/insights/ebs_gp2_to_gp3",
    "packages/insights/ebs_unattached",
    "packages/insights/snapshot_orphan",
    "packages/insights/ec2_stopped_with_storage",
    "packages/insights/chargeback",
    "apps/api",
]

[tool.uv.sources]
# Workspace members must be declared here for `uv sync` / `uv lock` to
# resolve them from the workspace instead of PyPI (F-11 remediation).
constat-core = { workspace = true }
constat-aws-rds = { workspace = true }
constat-aws-ec2 = { workspace = true }
constat-focus = { workspace = true }
constat-rds-eol = { workspace = true }
constat-mysql-eol = { workspace = true }
constat-aurora-eol = { workspace = true }
constat-ebs-gp2-to-gp3 = { workspace = true }
constat-ebs-unattached = { workspace = true }
constat-snapshot-orphan = { workspace = true }
constat-ec2-stopped-with-storage = { workspace = true }
constat-chargeback = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx2>=0.28",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "boto3>=1.34",  # transitively imported by constat_api.settings at module load (alembic env needs it)
    "boto3-stubs[rds]>=1.34",
    "alembic>=1.13",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "postgres: tests that require a live Postgres (set CONSTAT_TEST_DATABASE_URL)",
]
pythonpath = [
    "packages/core/src",
    "packages/connectors/aws_rds/src",
    "packages/connectors/aws_ec2/src",
    "packages/connectors/focus/src",
    "packages/insights/rds_eol/src",
    "packages/insights/mysql_eol/src",
    "packages/insights/aurora_eol/src",
    "packages/insights/ebs_gp2_to_gp3/src",
    "packages/insights/ebs_unattached/src",
    "packages/insights/snapshot_orphan/src",
    "packages/insights/ec2_stopped_with_storage/src",
    "packages/insights/chargeback/src",
    "apps/api/src",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts are fine
"apps/api/src/constat_api/routers/**/*.py" = ["B008"]  # FastAPI Depends/Query in defaults is the standard pattern
"apps/api/src/constat_api/auth.py" = ["B008"]  # FastAPI Depends in default is the standard pattern for the dep
"apps/api/src/constat_api/orm.py" = ["N811"]  # SQLAlchemy pattern: import UUID as PgUUID

[tool.mypy]
python_version = "3.13"
strict = false
files = ["packages/core/src"]

[[tool.mypy.overrides]]
module = "boto3.*"
ignore_missing_imports = true
