[project]
name = "constat-api"
version = "0.0.0"
description = "Constat FastAPI — orchestrator + REST"
requires-python = ">=3.13"
dependencies = [
    "constat-core",
    "constat-aws-rds",
    "constat-focus",
    "constat-rds-eol",
    "constat-chargeback",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constat_api"]
