[project]
name = "constat-api"
version = "0.0.0"
description = "Constat FastAPI — orchestrator + REST"
requires-python = ">=3.13"
dependencies = [
    "constat-core",
    "constat-aws-rds",
    "constat-focus",
    "constat-rds-eol",
    "constat-mysql-eol",
    "constat-aurora-eol",
    "constat-chargeback",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/constat_api"]
